// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useGetOrders > default 1`] = `
{
  "pageParams": [
    undefined,
  ],
  "pages": [
    {
      "nextCursor": "0x2a",
      "orders": [
        {
          "amount": 100000000000000000000n,
          "baseToken": "0x20c000000000000000000000000000000000000d",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 4n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000000c",
          "remaining": 100000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 100000000000000000000n,
          "baseToken": "0x20c000000000000000000000000000000000001e",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 8n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000001d",
          "remaining": 100000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 50000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000020",
          "flipTick": 200,
          "isBid": true,
          "isFlip": true,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 9n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000001f",
          "remaining": 50000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 230000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 48n,
          "orderId": 28n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 230000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 430000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 48n,
          "prev": 28n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 430000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 210000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 46n,
          "orderId": 26n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 210000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 410000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 46n,
          "prev": 26n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 410000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 190000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 44n,
          "orderId": 24n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 190000000000000000000n,
          "tick": 400,
        },
        {
          "amount": 390000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 44n,
          "prev": 24n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 390000000000000000000n,
          "tick": 400,
        },
        {
          "amount": 170000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 42n,
          "orderId": 22n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 170000000000000000000n,
          "tick": 200,
        },
      ],
    },
  ],
}
`;

exports[`useGetOrders > default 2`] = `
{
  "pageParams": [
    undefined,
    "0x2a",
  ],
  "pages": [
    {
      "nextCursor": "0x2a",
      "orders": [
        {
          "amount": 100000000000000000000n,
          "baseToken": "0x20c000000000000000000000000000000000000d",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 4n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000000c",
          "remaining": 100000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 100000000000000000000n,
          "baseToken": "0x20c000000000000000000000000000000000001e",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 8n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000001d",
          "remaining": 100000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 50000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000020",
          "flipTick": 200,
          "isBid": true,
          "isFlip": true,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 9n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000001f",
          "remaining": 50000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 230000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 48n,
          "orderId": 28n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 230000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 430000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 48n,
          "prev": 28n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 430000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 210000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 46n,
          "orderId": 26n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 210000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 410000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 46n,
          "prev": 26n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 410000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 190000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 44n,
          "orderId": 24n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 190000000000000000000n,
          "tick": 400,
        },
        {
          "amount": 390000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 44n,
          "prev": 24n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 390000000000000000000n,
          "tick": 400,
        },
        {
          "amount": 170000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 42n,
          "orderId": 22n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 170000000000000000000n,
          "tick": 200,
        },
      ],
    },
    {
      "nextCursor": "0x16",
      "orders": [
        {
          "amount": 370000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 42n,
          "prev": 22n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 370000000000000000000n,
          "tick": 200,
        },
        {
          "amount": 100000000000000000000n,
          "baseToken": "0x20c000000000000000000000000000000000000d",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 4n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000000c",
          "remaining": 100000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 100000000000000000000n,
          "baseToken": "0x20c000000000000000000000000000000000001e",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 8n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000001d",
          "remaining": 100000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 50000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000020",
          "flipTick": 200,
          "isBid": true,
          "isFlip": true,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 9n,
          "prev": 0n,
          "quoteToken": "0x20c000000000000000000000000000000000001f",
          "remaining": 50000000000000000000n,
          "tick": 100,
        },
        {
          "amount": 230000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 48n,
          "orderId": 28n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 230000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 430000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 48n,
          "prev": 28n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 430000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 210000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 46n,
          "orderId": 26n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 210000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 410000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 46n,
          "prev": 26n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 410000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 190000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 44n,
          "orderId": 24n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 190000000000000000000n,
          "tick": 400,
        },
        {
          "amount": 390000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000024",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 44n,
          "prev": 24n,
          "quoteToken": "0x20c0000000000000000000000000000000000023",
          "remaining": 390000000000000000000n,
          "tick": 400,
        },
      ],
    },
  ],
}
`;
